--- a/src/kadai1.ipynb
+++ b/src/kadai1.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
     "def check_file(file):\n",
     "    try:\n",
     "        with open(file, \"r\", encoding=\"utf-8\", errors=\"ignore\") as f:\n",
-    "            text = f.read().lower()  # すべて小文字に変換\n",
+    "            text = f.read().lower()  \n",
     "            if any(word in text for word in apple_keywords):\n",
     "                apple_related_files.append(file)\n",
     "    except Exception as e:\n",
