--- a/src/kadai2_mini-bert.ipynb
+++ b/src/kadai2_mini-bert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -254,20 +254,138 @@
       "\n",
       "\n",
       "A: Not on any version of the Mac App Store and iTunes App store for iTunes versions older than 10.5\n",
-      "It appears you can now hide iOS App Store purchas\n",
+      "It appears you can now hide iOS App Store purchases in the recently released version of iTunes.\n",
+      "\n",
+      "And you can see them once they're hidden as well as un-hide them if you wish.\n",
+      "\n",
+      "\n",
+      "A: No, Apple has not provided a way to do this on either the Mac or iOS app stores.\n",
+      "Please file a bug report with Apple at http://bugreport.apple.com/. You can copy and paste the bug report I filed regarding this issue from here: http://openradar.appspot.com/radar?id=1338401 and be sure to note that it is a duplicate of rdar://10115627.\n",
+      "Apple encourages duplicate bug reports as it helps them prioritize issues. This is one I'd love to see resolved.\n",
+      "Here's a copy of the bug report I filed:\n",
+      "\n",
+      "Summary:\n",
+      "Since the addition of the \"purchased\" tab in both the iOS and Mac App\n",
+      "  Stores it is trivial for anyone using your device to view a full\n",
+      "  history of every app ever purchased on your account. This does not\n",
+      "  seem in keeping with Apple's otherwise impeccable record with regard\n",
+      "  to protecting their customer's privacy.\n",
+      "Steps to Reproduce:\n",
+      "  \n",
+      "  \n",
+      "*\n",
+      "  \n",
+      "*Open App Store\n",
+      "  \n",
+      "*Click Purchased along the top of the window\n",
+      "  \n",
+      "*Scroll\n",
+      "  \n",
+      "*You will not find a delete feature to remove items from this list\n",
+      "  \n",
+      "  \n",
+      "  Expected Results:\n",
+      "A delete button that will allow for the permanent removal of an\n",
+      "  application from purchase history. \n",
+      "Actual Results:\n",
+      "No way to delete items from the list.\n",
+      "Notes:\n",
+      "It would be fine if deleting an application produced a warning\n",
+      "  indicating that if the purchase record is removed the user will have\n",
+      "  to pay the next time they want to acquire  this application.\n",
+      "\n",
+      "\n",
       "\n",
       "--- ファイル: ../data/text/4601.txt ---\n",
       "類似度: 0.6691976189613342\n",
       "内容:\n",
       "Q: I need to delete apps that I have previously purchased and deleted from my account history I need to remove some apps from my account history forever because I don't want them anymore, and because iCloud keeps a new history format I need to know the process which is doing this.\n",
       "\n",
-      "A: I doubt you can. Your account history is on Apple's servers, so you can only read it. I doubt they'd delete anything from there for you just in case you change your mind and want it back. There's certainly nothing \n",
+      "A: I doubt you can. Your account history is on Apple's servers, so you can only read it. I doubt they'd delete anything from there for you just in case you change your mind and want it back. There's certainly nothing on your computer or iOS device that you can tweak to change your history.\n",
+      "\n",
+      "A: Apple now allows you to Hide purchases using iTunes 10.5.  Open iTunes Store > Purchases and then look for the purchases you want to Hide and click the X.\n",
+      "Beware it keeps a list of Hidden Purchases you can still view to get them back.\n",
+      "\n",
+      "A: While this does not remove the apps from your account entirely, you can remove them from the history list by viewing the Purchased items in App Store>Updates>Purchased and swiping left on the app you want to remove from the history list. \n",
+      "\n",
       "\n",
       "--- ファイル: ../data/text/4729.txt ---\n",
       "類似度: 0.668845534324646\n",
       "内容:\n",
       "Q: Deleting iTunes App Store purchases from my account So... Over the period of 2 years owning my beloved iPhone 3GS, I have found many useful apps that I use very frequently. However, in the process of finding these apps, I have also downloaded much, much more crappy apps.\n",
-      "With the introduction of the \"Purchased\" section on the App Store, many of the hundreds of apps I downloaded (mostly crappy) have popped up again. The apps are an eyesore and clutter up the whole space. Is there a way for me \n",
+      "With the introduction of the \"Purchased\" section on the App Store, many of the hundreds of apps I downloaded (mostly crappy) have popped up again. The apps are an eyesore and clutter up the whole space. Is there a way for me to delete them (from my account) forever, or at least hide them?\n",
+      "\n",
+      "A: Sorry but there is no way, at this time, to remove purchased (include free) apps on iTunes AppStore. Same problem with the Mac AppStore.\n",
+      "I've already asked for this feature at iTunes Feedbacks, and you can do the same to make Apple understand what we want.\n",
+      "The ability to hide purchases from the iOS app store should cover most real-life situations where you would normally delete a past purchase. It also protects those who have lost control of their accounts and someone maliciously deletes past purchases. The idea that the past is unchangeable, but we wish to hide some items from prominence works for many.\n",
+      "\n",
+      "A: iTunes 10.5 is now released and contains this feature.  Go to iTunes Store > Purchased > Apps and then you can click the X to Hide purchases.\n",
+      "Note that there is still a new section \"Hidden Purchases\" where you can view the ones you've hidden (and the ability to unhide them.)\n",
+      "There is no capability to actually delete a past purchase, just to hide them from view.\n",
+      "\n",
+      "A: you can hide any purchased items. Instructions for OS X 10.01/iOS 8/iTunes 12 (though similar to the previous versions).\n",
+      "In the Mac App Store:\n",
+      "\n",
+      "\n",
+      "*\n",
+      "\n",
+      "*Click Purchases\n",
+      "\n",
+      "*Rclick on the app you want to hide \n",
+      "\n",
+      "*choose \"Hide Purchase\"\n",
+      "\n",
+      "\n",
+      "In the iTunes store on your iOS Device, slide from right to left and choose hide.\n",
+      "In the iTunes store in iTunes:\n",
+      "\n",
+      "\n",
+      "*\n",
+      "\n",
+      "*Go to the Apps section of iTunes\n",
+      "\n",
+      "*Click \"App Store\" (last item)\n",
+      "\n",
+      "*Click \"Purchased\" (on right, near account info)\n",
+      "\n",
+      "*Find app you want to hide and click the \"x\" in upper left of icon\n",
+      "\n",
+      "*When asked if you want to hide the purchase, click \"Hide\"\n",
+      "\n",
+      "\n",
+      "A: No, but customer feedback certainly drove this feature and more feedback might bring about the filtering you desire.\n",
+      "I would use recommendations more if I could select some downloads to ignore.\n",
+      "Control over filtering out purchased items from the re-download list would make that feature so much more useful.\n",
+      "Control is always nice, but once one has 300 apps on iTunes and have deleted 100 after never using them again, the list can have a large portion of duds as it stands. \n",
+      "\n",
+      "A: According to http://support.apple.com/kb/HT5772 (How to delete content you've downloaded from the iTunes Store, App Store, iBooks Store, or Mac App Store, Last Modified: May 13, 2014)\n",
+      "Apps\n",
+      "iPhone, iPad, or iPod touch\n",
+      "\n",
+      "\n",
+      "*\n",
+      "\n",
+      "*Tap and hold the app you want to delete.\n",
+      "\n",
+      "*The apps will begin to jiggle.\n",
+      "\n",
+      "*Tap the X on the app.\n",
+      "\n",
+      "\n",
+      "Mac or PC\n",
+      "\n",
+      "\n",
+      "*\n",
+      "\n",
+      "*Open iTunes.\n",
+      "\n",
+      "*From the Library pop-up menu, choose Apps.\n",
+      "\n",
+      "*Click the app you want to delete.\n",
+      "\n",
+      "*Press Delete on your keyboard.\n",
+      "\n",
+      "\n",
       "\n",
       "--- ファイル: ../data/text/3133.txt ---\n",
       "類似度: 0.6525005102157593\n",
@@ -277,7 +395,16 @@
       "A: I don't think there is a way to view just iPhone App purchases.\n",
       "You can view your whole iTunes purchase history. You can see your iPhone app purchases there.\n",
       "Open iTunes -> Store menu -> View My Account -> Sign in -> Go to Purchase History\n",
-      "Update: This seem to include all your purchase\n",
+      "Update: This seem to include all your purchases using your Apple ID (iOS App Store, Mac App Store, and iTunes Store)\n",
+      "\n",
+      "A: This is now possible since iOS 4.3.3 by going into the iPhone App Store > Updates > Purchased.  It provides a list of your iPhone app purchases and allows redownloading from the iCloud.\n",
+      "Also you can visit reportaproblem.apple.com and all recent purchases will be shown.\n",
+      "\n",
+      "A: On iOS, go to Settings > [your name] > iTunes & App Store.\n",
+      "\n",
+      "A: Not true...\n",
+      "None of these links are possible, nor if they when they do seem to be relevant show history of purchases. I do have doubts that Apple Store have charged me few times for an application I have paid for over and over again. So when it comes to check what have purchased there is no way possible, except on the phone and they are not in logical order, which makes hard to pinpoint which have I bought recently that I have gotten charged for it few times. Sometimes it shows that I have purchased something but the some don't show I have paid for them, although I did already. Surprisingly enough sometimes an application will show a price on it, I will install and it will say that I paid for it before, but other times more often it doesn't say that, and it makes me pay for it few times. Now I have been trying to look up the history purchase and no where in hell is it clearly apparent that I can achieve that mission. \n",
+      "\n",
       "\n",
       "--- ファイル: ../data/text/6349.txt ---\n",
       "類似度: 0.6021304130554199\n",
@@ -285,13 +412,49 @@
       "Q: How to remove apps from the \"Purchased\" list in the Mac OSX App Store? I've installed a bunch of apps from the App Store, some free, some paid. Many of them are garbage, were uninstalled, and I don't intend to ever install them again.\n",
       "How can I remove (or hide) them from the \"Purchased\" list?\n",
       "\n",
-      "A: I am running Lion (10.7.2), and there is an x just to the left of the Install / Installed button when you hover over the item in the purchased list. Click it for each App you do not want listed. I do\n",
+      "A: I am running Lion (10.7.2), and there is an x just to the left of the Install / Installed button when you hover over the item in the purchased list. Click it for each App you do not want listed. I don't believe this uninstalls the App, merely removes it from the list. I did this to a program I actually wanted in the list, I don't recall even being asked for confirmation.\n",
+      "Now as far as getting a purchased App back onto your purchased list, that is another issue, and another question.\n",
+      "\n",
+      "A: Right now, there is no way to remove purchased apps. It's very annoying, hopefully will be possible in the future.\n",
+      "\n",
+      "A: You may hide purchases in OS X by hovering over an item within the Purchased tab...hold Ctrl+right-click, then select \"Hide Purchase\".\n",
+      "\n",
       "\n",
       "--- ファイル: ../data/text/483.txt ---\n",
       "類似度: 0.5989525318145752\n",
       "内容:\n",
       "Q: How can I find out which apps I have already downloaded on my iPhone? When you attempt to download an app that costs money, you will not be charged if you already bought the app. After you press buy and enter your iTunes password, it will say \"You have already purchased this item. To download it again for free, select OK.\"\n",
-      "The problem is that I deleted hundreds of apps from my phone, some of which were paid for. Later on I might find an app I like but notice that it costs money. It might be a\n",
+      "The problem is that I deleted hundreds of apps from my phone, some of which were paid for. Later on I might find an app I like but notice that it costs money. It might be an app I had already paid for, or an app which I got when it was free.\n",
+      "How can I know if I tap the buy button if I will be charged for the app or not?\n",
+      "In other words, how can I know if I owned a previous version of an app before?\n",
+      "\n",
+      "A: To see a listing of all the apps you have purchased or downloaded, do this :\n",
+      "\n",
+      "\n",
+      "*\n",
+      "\n",
+      "*Go to Store > View My Account\n",
+      "\n",
+      "*Login\n",
+      "\n",
+      "*Click on \"Purchase History\"\n",
+      "\n",
+      "\n",
+      "You should now see all the apps you have downloaded before.\n",
+      "Stolen from caliban's answer here.\n",
+      "\n",
+      "A: Update: The easiest way to do this is to open up the App Store on the iPad, and search for the app. If you see it say \"INSTALL,\" rather than showing a price, it means that you have purchased the app before, and can download it again for free.\n",
+      "\n",
+      "One way to do this is to archive all your iTunes receipt notifications in your email account. This way you can search your email account for the application's name and see if it exists in any of your receipts.\n",
+      "The downside to this is that if the application's name changed it won't find it since your receipt will contain the application's old name. You could try searching for the seller's name, but that might change as well.\n",
+      "Another way to do this is to look at your iTunes purchase history. While this will have the application's current name (unlike in email archiving), there is no easy way to search through it.\n",
+      "Another difference between the two methods is that the Purchase History will contain app updates you downloaded, while the receipt emails will not.\n",
+      "Update: It seems that as of May, I no longer get receipts for free items via email.\n",
+      "\n",
+      "A: Apps that you delete on your iPhone are still in your iTunes. You should see there wich Apps you already payed for.\n",
+      "\n",
+      "A: Yeah, there are apps that I remember what they did and want to try it again but forget the name, so instead of trying to search for category, it's easier sometimes to go through the iTunes Account download history.\n",
+      "\n",
       "\n",
       "--- ファイル: ../data/text/1042.txt ---\n",
       "類似度: 0.5946338176727295\n",
@@ -301,13 +464,29 @@
       "How can I find out which apps I have already downloaded on my iPhone? \n",
       "\n",
       "The knowledge base mentions that you get to reinstall the app for free... once you find it again on the store, which is no easy task. There are dozens of apps, all alike the one that was installed.\n",
-      "Is there a way to have a list of apps you have bought? At what point of the purchasing process does this dialog appear? Does a price tag appear for already purcha\n",
+      "Is there a way to have a list of apps you have bought? At what point of the purchasing process does this dialog appear? Does a price tag appear for already purchased items? If so, does this message appear after you single tap on the price tag, or do you need to risk a double tap?\n",
+      "\n",
+      "\n",
+      "A: On iTunes, under iTunes Store > Account > Purchase History, you've got a list of all your iTunes Store purchases.\n",
+      "If you already bought an app, it still appears with the price on the Store. Last time I checked, I had to risk re-buying to see it was free since I already bought it.\n",
+      "Hope that helps!\n",
+      "\n",
+      "\n",
+      "\n",
       "\n",
       "--- ファイル: ../data/text/6657.txt ---\n",
       "類似度: 0.594049334526062\n",
       "内容:\n",
       "Q: Is there a way to differentiate between paid and free apps in iTunes purchase history? I want to know what apps I've paid money for, as opposed to free apps that were downloaded. \n",
-      "I need to know this because I gave my little brother my old 3GS to use as an iPod which remains attached to my iTunes account because he doesn't have a credit card or an income in order set up an account. I notice that he downloads a lot of apps, games in particular, and I'm worried because I've tried a few that see\n"
+      "I need to know this because I gave my little brother my old 3GS to use as an iPod which remains attached to my iTunes account because he doesn't have a credit card or an income in order set up an account. I notice that he downloads a lot of apps, games in particular, and I'm worried because I've tried a few that seem like they could easily charge for. I often download apps that I pay for, so often that I wouldn't know if he was buying things without my knowledge. \n",
+      "Every now and then I notice a charge from iTunes that I don't remember making, so I need to know what I've paid for. Is there a way to show what apps I've actually spent money on?\n",
+      "\n",
+      "A: In addition to keeping your email receipts, you can also view your entire purchase history by viewing your account in iTunes. If you're signed in, click your account name in the top right, and choose the \"View Account\" option. On the following screen, the third section down shows \"Purchase History\", with a link on the right to see all your orders. You can see each order, listed chronologically, and jump to specific months and get more detail about a specific order.\n",
+      "\n",
+      "A: You have to save and process your email receipts to know what you paid. (or somehow scrape the history from within iTunes) - it's simply not an option you can sort currently. \n",
+      "Since prices change on the store, some other solution that doesn't involve your paid balance being shown isn't a tool that has been provided. \n",
+      "Many have asked for this since it makes so much sense for a variety of use cases -- in addition to the situation you find yourself in. Unless you have the ear of someone that works in the iTunes store, http://apple.com/feedback is the best way to agitate for change. \n",
+      "\n"
      ]
     }
    ],
@@ -320,7 +499,7 @@
     "            text_content = f.read()\n",
     "            print(f\"\\n--- ファイル: {file_path} ---\")\n",
     "            print(f\"類似度: {similarity}\")\n",
-    "            print(f\"内容:\\n{text_content[:500]}\") \n",
+    "            print(f\"内容:\\n{text_content}\") \n",
     "    except Exception as e:\n",
     "        print(f\"Error processing {file_path}: {e}\")"
    ]
